Dynegy/src/objects/Peak_Load_Information__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <formula>AND( IF(Start_Date__c &lt;= TODAY(), True, false) ,  IF( EndDate__c &lt;= TODAY(), false, true) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DASR_Request__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is created for the SCR 1162</description>
        <label>DASR Request</label>
        <referenceTo>DASR_Request__c</referenceTo>
        <relationshipName>Peak_Load_Informations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EndDate__c</fullName>
        <label>End Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <formula>IF(   ISPICKVAL(Load_Type__c, &quot;PLC&quot;), IF((MONTH(Start_Date__c)&gt;5 ), DATE( (YEAR( Start_Date__c) +  1 ), 05,  31),DATE( (YEAR( Start_Date__c)),   05,  31)), IF((MONTH(Start_Date__c) &gt;= 1 ), DATE( (YEAR( Start_Date__c)), 12,  31), NULL) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LDC_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>LDC Account</label>
        <referenceTo>LDC_Account__c</referenceTo>
        <relationshipName>Peak_Load_Informations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Load_Type__c</fullName>
        <label>Load Type</label>
        <picklist>
            <picklistValues>
                <fullName>PLC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NSPLC</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <required>true</required>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Load_Value__c</fullName>
        <label>Load Value</label>
        <precision>14</precision>
        <required>true</required>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <label>Peak Load Information</label>
    <nameField>
        <displayFormat>P-{000000}</displayFormat>
        <label>Peak Load Information</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Peak Load Information</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Before_LDC_Accepted</fullName>
        <active>false</active>
        <errorConditionFormula>LDC_Account__r.Enrolled__c = false</errorConditionFormula>
        <errorMessage>Can&apos;t create records before the LDC Account is enrolled</errorMessage>
    </validationRules>
</CustomObject>